force-app/main/default/objects/NCSP_Schedule_A__c/NCSP_Schedule_A__c.object-meta.xml
<CustomObject>
    <description>Opportunity notes and attachments will have schedule A , this data is captured in this object by NCSP data entry team Gitlab 23164</description>
    <label>NCSP Schedule A</label>
    <nameField>
        <displayFormat>NSA -{0000}</displayFormat>
        <label>NCSP Schedule A</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NCSP Schedule A</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>