force-app/main/default/objects/NCSP_Schedule_A__c/fields/Bill_For_Contaminated_Bin_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Bill_For_Contaminated_Bin_Indicator__c</fullName>
    <description>Created as part of NCSP optimization project to store Schedule A data Gitlab #25221.</description>
    <label>Bill For Contaminated Bin Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
                <default>true</default>
                <label>NO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>