force-app/main/default/objects/NCSP_Schedule_A__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Created as part of NCSP optimization project to store Schedule A data this will be used in integration to create records in SKP #Gitlab 23164</description>
    <label>Contract</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>Contract.RecordTypeId</field>
            <operation>equals</operation>
            <value>IM Contract</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>NCSP Schedule As</relationshipLabel>
    <relationshipName>NCSP_Schedule_As</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>