force-app/main/default/objects/NCSP_Schedule_A__c/fields/Expedited_Transportation_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Expedited_Transportation_Surcharge__c</fullName>
    <description>Created as part of NCSP optimization project to store Schedule A data Gitlab #24462.</description>
    <label>Expedited Transportation Surcharge %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>