force-app/main/default/objects/NCSP_Schedule_A__c/fields/Order_Service_Fee_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Service_Fee_Effective_Date__c</fullName>
    <description>Created as part of NCSP optimization project to store Schedule A data Gitlab #24462.</description>
    <label>Order Service Fee Effective Date</label>
    <type>Date</type>
</CustomField>