force-app/main/default/objects/NCSP_Schedule_A__c/fields/Shredding_Offsite_Minimum__c.field-meta.xml
<CustomField>
    <fullName>Shredding_Offsite_Minimum__c</fullName>
    <defaultValue>&quot;YES&quot;</defaultValue>
    <description>Created as part of NCSP optimization project to store Schedule A data this will be used in integration to create records in SKP #Gitlab 23164</description>
    <label>Shredding Offsite Minimum</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
                <default>true</default>
                <label>YES</label>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>