force-app/main/default/objects/NCSP_Schedule_A__c/fields/Termination_Handling_Fee_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Termination_Handling_Fee_Indicator__c</fullName>
    <defaultValue>&apos;None&apos;</defaultValue>
    <description>Created as part of NCSP optimization project to store Schedule A data Gitlab #24462.</description>
    <label>Termination Handling Fee Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>