force-app/main/default/objects/NCSP_Schedule_A__c/validationRules/ETS_Field_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>ETS_Field_Mandatory</fullName>
    <active>true</active>
    <description>For Gitlab #24462</description>
    <errorConditionFormula>ISBLANK(  Expedited_Transportation_Surcharge__c  )</errorConditionFormula>
    <errorDisplayField>Expedited_Transportation_Surcharge__c</errorDisplayField>
    <errorMessage>Complete this field</errorMessage>
</ValidationRule>