force-app/main/default/objects/NCSP_Schedule_A__c/validationRules/Initial_Move_Period_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Initial_Move_Period_Mandatory</fullName>
    <active>true</active>
    <description>For Gitlab #24462</description>
    <errorConditionFormula>ISBLANK( TEXT(Initial_Move_Period__c ))</errorConditionFormula>
    <errorDisplayField>Initial_Move_Period__c</errorDisplayField>
    <errorMessage>Complete this field</errorMessage>
</ValidationRule>