force-app/main/default/objects/NCSP_Schedule_A__c/validationRules/OSF_Indicator_Field_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>OSF_Indicator_Field_Mandatory</fullName>
    <active>true</active>
    <description>For Gitlab #24462</description>
    <errorConditionFormula>ISBLANK(  TEXT(Order_Service_Fee_Indicator__c)  )</errorConditionFormula>
    <errorDisplayField>Order_Service_Fee_Indicator__c</errorDisplayField>
    <errorMessage>Complete this field.</errorMessage>
</ValidationRule>