force-app/main/default/objects/NCSP_Schedule_A__c/validationRules/THFI_Field_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>THFI_Field_Mandatory</fullName>
    <active>true</active>
    <description>For Gitlab #24462</description>
    <errorConditionFormula>ISBLANK( TEXT(Termination_Handling_Fee_Indicator__c) )</errorConditionFormula>
    <errorDisplayField>Termination_Handling_Fee_Indicator__c</errorDisplayField>
    <errorMessage>Complete this field.</errorMessage>
</ValidationRule>